--- a/analysis-survey/1-index-standardization.Rmd
+++ b/analysis-survey/1-index-standardization.Rmd
@@ -4,7 +4,7 @@ author: "Philina English"
 date: "`r Sys.Date()`"
 output: html_document
 params:
-    # species: "Redbanded Rockfish"
+    # species: "Canary Rockfish"
     # species: "Arrowtooth Flounder"
     # species: "Big Skate"
     # species: "North Pacific Spiny Dogfish"
@@ -17,10 +17,11 @@ params:
     # region: "HBLL outside surveys"
     # region: "HBLL inside surveys"
     region: "WCHG only"
-    delta_model: FALSE
+    delta_model: TRUE
     # region: "HBLL inside surveys"
     name: "-rw-no-covs" # covariate string used to name model rds
-    update_model: FALSE # TRUE will over write past models; will alway attempt a model if none exists
+    # update_model: FALSE
+    update_model: TRUE # TRUE will over write past models; will alway attempt a model if none exists
     update_index: TRUE
 ---
 
@@ -60,6 +61,7 @@ paste("model label =", name)
 Load data
 ```{r, message=FALSE, warning=FALSE}
 spp <- gsub(" ", "-", gsub("\\/", "-", tolower(species)))
+anisotropy <- FALSE
 
 if (region == "Both odd year trawl surveys") {
   nd_all <- readRDS(paste0("data/nd_whole_coast_index.rds")) %>% mutate(area = 4)
@@ -94,6 +96,7 @@ if (region == "WCHG only") {
   survey <- c("SYN WCHG")
   type <- "Synoptic trawl"
   model_ssid <- c(16)
+  anisotropy <- TRUE
 }
 
 if (region == "Coast-wide trawl surveys") {
@@ -185,6 +188,7 @@ if (type == "Synoptic trawl") {
     filter(survey_abbrev %in% survey)
   units <- "density_ppkm2"
   d$density <- d[[units]] # change from per m2 to per km2
+  family <- tweedie(link = "log")
   # family <- nbinom2(link = 'log') # could use this instead, but would need to change units and add offset
 }
 
@@ -220,10 +224,15 @@ if (prop_pos < 0.1) {
     cutoff <- 15
   }
 }
-if(region == "WCHG only") {
+if(region %in% c("WCHG only")) {
   cutoff <- 5
   update_model <- TRUE
 }
+if(region %in% c("HBLL inside surveys")) {
+  cutoff <- 10
+  update_model <- TRUE
+}
+
 spde <- make_mesh(data, xy_cols = c("X", "Y"), cutoff = cutoff)
 plot(spde)
 if (delta_model) {
@@ -252,6 +261,14 @@ Run sdmTMB model
 
 ```{r}
 if (update_model) {
+  year_range <- range(data$year)
+  all_years <- data.frame(year = year_range[1]:year_range[2])
+  missing_years <- anti_join(all_years, data, by = "year") %>%
+     select(year) %>%
+     unique()
+  missing_years <- missing_years$year
+      
+   
   if (delta_model) {
     tictoc::tic()
 
@@ -260,9 +277,11 @@ if (update_model) {
       data,
       mesh = spde,
       time = "year",
+      extra_time = missing_years,
       family = binomial(),
       spatial = "on",
       spatiotemporal = "RW",
+      anisotropy = anisotropy,
       # reml = TRUE,
       silent = TRUE
     )
@@ -274,12 +293,12 @@ if (update_model) {
       # check if positive sets are found in all years
       if (!all(sort(unique(data$year)) == sort(unique(data2$year)))) {
         pos_years <- data2 %>% select(year)
-        missing_years <- anti_join(data, pos_years, by = "year") %>%
+        missing_years <- anti_join(all_years, data2, by = "year") %>%
           select(year) %>%
           unique()
-        missing_years <- missing_years$year
+        missing_years2 <- missing_years$year
       } else {
-        missing_years <- NULL
+        missing_years2 <- missing_years
       }
 
       tictoc::tic()
@@ -289,10 +308,11 @@ if (update_model) {
         data2,
         mesh = spde2,
         time = "year",
-        extra_time = missing_years,
+        extra_time = missing_years2,
         family = Gamma(link = "log"),
         spatial = "on",
         spatiotemporal = "RW",
+        anisotropy = anisotropy,
         # reml = TRUE,
         silent = TRUE
       )
@@ -308,15 +328,18 @@ if (update_model) {
   }
 
   if (!delta_model) {
+ 
     tictoc::tic()
     m <- sdmTMB(
       density ~ 1,
       data,
       mesh = spde,
       time = "year",
+      extra_time = missing_years,
       family = family,
       spatial = "on",
       spatiotemporal = "RW",
+      anisotropy = anisotropy,
       # reml = TRUE,
       silent = TRUE
     )
