grid, render, nsim

--- a/analysis-survey/1-index-standardization.Rmd
+++ b/analysis-survey/1-index-standardization.Rmd
@@ -7,23 +7,23 @@ params:
     # species: "Canary Rockfish"
     # species: "Arrowtooth Flounder"
     # species: "Big Skate"
-    species: "North Pacific Spiny Dogfish"
-    # species: "Pacific Ocean Perch"
+    # species: "North Pacific Spiny Dogfish"
+    species: "Pacific Ocean Perch"
     # species: "Bocaccio"
     # species: "Rougheye/Blackspotted Rockfish Complex"
     # species: "Pacific Sand Lance"
     # species: "Pacific Herring"
-    region: "Coast-wide trawl surveys"
+    # region: "Coast-wide trawl surveys"
     # region: "HBLL outside surveys"
     # region: "HBLL inside surveys"
-    # region: "WCHG only"
+    region: "WCHG only"
     delta_model: TRUE
     # region: "HBLL inside surveys"
     name: "-rw-no-covs" # covariate string used to name model rds
     # update_model: FALSE
     update_model: TRUE # TRUE will over write past models; will alway attempt a model if none exists
     update_index: TRUE
-    silent: TRUE
+    silent: FALSE
 ---
 
 ```{r global_options, include=FALSE}
@@ -214,10 +214,14 @@ data <- sdmTMB::add_utm_columns(data, c("longitude", "latitude"), utm_crs = 3260
 ```
 
 Make mesh
+
 ```{r}
 cutoff <- 15
-if (region %in% c("WCHG only", "HBLL inside surveys", "QCS only", "HS only", "WCVI only")) {
+if (region %in% c("HBLL inside surveys", "QCS only", "HS only", "WCVI only")) {
   cutoff <- 10
+}
+if (region %in% c("WCHG only")) {
+  cutoff <- 5
 }
 
 spde <- make_mesh(data, xy_cols = c("X", "Y"), cutoff = cutoff)
@@ -456,8 +460,8 @@ if (delta_model & exists("m1") & exists("m2")) {
     # m1$pos_def_hessian, m2$pos_def_hessian # new way
   )
   if (both_converged & update_index) {
-    p1 <- predict(m1, newdata = nd, nsim = 200)
-    p2 <- predict(m2, newdata = nd, nsim = 200)
+    p1 <- predict(m1, newdata = nd, nsim = 1000)
+    p2 <- predict(m2, newdata = nd, nsim = 1000)
     p <- log(plogis(p1) * exp(p2))
 
     i <- get_index_sims(p, area = nd$area)
@@ -478,7 +482,7 @@ if (delta_model & exists("m1") & exists("m2")) {
 } else {
   if (exists("m")) {
     if (max(m$gradients) < 0.1 & !m$bad_eig & m$sd_report$pdHess & update_index) {
-      p <- predict(m, newdata = nd, nsim = 200)
+      p <- predict(m, newdata = nd, nsim = 1000)
 
       i <- get_index_sims(p, area = nd$area)
       i <- i %>% mutate(
