--- a/analysis-survey/1-index-standardization.Rmd
+++ b/analysis-survey/1-index-standardization.Rmd
@@ -7,17 +7,17 @@ params:
     # species: "Canary Rockfish"
     # species: "Arrowtooth Flounder"
     # species: "Big Skate"
-    # species: "North Pacific Spiny Dogfish"
-    species: "Pacific Ocean Perch"
+    species: "North Pacific Spiny Dogfish"
+    # species: "Pacific Ocean Perch"
     # species: "Bocaccio"
     # species: "Rougheye/Blackspotted Rockfish Complex"
     # species: "Pacific Sand Lance"
     # species: "Pacific Herring"
-    # region: "Coast-wide trawl surveys"
+    region: "Coast-wide trawl surveys"
     # region: "HBLL outside surveys"
     # region: "HBLL inside surveys"
-    region: "WCHG only"
-    delta_model: TRUE
+    # region: "WCHG only"
+    delta_model: FALSE
     # region: "HBLL inside surveys"
     name: "-rw-no-covs" # covariate string used to name model rds
     # update_model: FALSE
@@ -247,7 +247,7 @@ if (delta_model) {
     update_model <- TRUE
   }
 } else {
-  f <- readRDS(here::here(paste0("data-generated/models/m-", spp, "-", ssid_string, name, ".rds")))
+  f <- here::here(paste0("data-generated/models/m-", spp, "-", ssid_string, name, ".rds"))
   if (file.exists(f)) {
     m <- readRDS(f)
   } else {
