--- a/analysis-survey/1-index-standardization.Rmd
+++ b/analysis-survey/1-index-standardization.Rmd
@@ -7,16 +7,16 @@ params:
     # species: "Canary Rockfish"
     # species: "Arrowtooth Flounder"
     # species: "Big Skate"
-    # species: "North Pacific Spiny Dogfish"
-    species: "Pacific Ocean Perch"
+    species: "North Pacific Spiny Dogfish"
+    # species: "Pacific Ocean Perch"
     # species: "Bocaccio"
     # species: "Rougheye/Blackspotted Rockfish Complex"
     # species: "Pacific Sand Lance"
     # species: "Pacific Herring"
     # region: "Coast-wide trawl surveys"
     # region: "HBLL outside surveys"
-    # region: "HBLL inside surveys"
-    region: "WCHG only"
+    region: "HBLL inside surveys"
+    # region: "WCHG only"
     delta_model: TRUE
     # region: "HBLL inside surveys"
     name: "-rw-no-covs" # covariate string used to name model rds
@@ -425,18 +425,18 @@ Check depths of positive sets
 ```{r}
 hist(data$depth_m)
 hist(positive_sets$depth_m)
-depth_limit <- ifelse(
-  max(positive_sets$depth_m, na.rm = T) > 500, max(positive_sets$depth_m, na.rm = T), max(positive_sets$depth_m, na.rm = T) + 100
-)
+# depth_limit <- ifelse(
+  # max(positive_sets$depth_m, na.rm = T) > 500, max(positive_sets$depth_m, na.rm = T), max(positive_sets$depth_m, na.rm = T) + 100
+# )
 ```
 
 Get simulated index
 ```{r}
 dir.create(here::here("data-generated/indices"), showWarnings = FALSE)
 
-nd <- nd_all %>%
-  filter(year %in% unique(data$year)) %>%
-  filter(depth < depth_limit)
+# nd <- nd_all %>%
+  # filter(year %in% unique(data$year)) %>%
+  # filter(depth < depth_limit)
 if (type == "Synoptic trawl") {
   nd <- filter(nd, survey %in% unique(positive_sets$survey_abbrev))
 } else {
@@ -483,7 +483,6 @@ if (delta_model & exists("m1") & exists("m2")) {
   if (exists("m")) {
     if (max(m$gradients) < 0.1 & !m$bad_eig & m$sd_report$pdHess & update_index) {
       p <- predict(m, newdata = nd, nsim = 1000)
-
       i <- get_index_sims(p, area = nd$area)
       i <- i %>% mutate(
         species = species,
