--- a/analysis-survey/1-index-standardization.Rmd
+++ b/analysis-survey/1-index-standardization.Rmd
@@ -7,16 +7,16 @@ params:
     # species: "Canary Rockfish"
     # species: "Arrowtooth Flounder"
     # species: "Big Skate"
-    species: "North Pacific Spiny Dogfish"
-    # species: "Pacific Ocean Perch"
+    # species: "North Pacific Spiny Dogfish"
+    species: "Pacific Ocean Perch"
     # species: "Bocaccio"
     # species: "Rougheye/Blackspotted Rockfish Complex"
     # species: "Pacific Sand Lance"
     # species: "Pacific Herring"
     # region: "Coast-wide trawl surveys"
     # region: "HBLL outside surveys"
-    region: "HBLL inside surveys"
-    # region: "WCHG only"
+    # region: "HBLL inside surveys"
+    region: "WCHG only"
     delta_model: TRUE
     # region: "HBLL inside surveys"
     name: "-rw-no-covs" # covariate string used to name model rds
@@ -447,8 +447,12 @@ dir.create(here::here("data-generated/indices"), showWarnings = FALSE)
   # filter(year %in% unique(data$year)) %>%
   # filter(depth < depth_limit)
 
-nd <- nd_all %>% 
-  filter(year >= min(year_range) & year <= max(year_range))
+if (delta_model) {
+  fitted_yrs <- union(unique(m1$data$year), unique(m2$data$year))
+} else {
+  fitted_yrs <- unique(m$data$year)
+}
+nd <- nd_all %>% filter(year %in% fitted_yrs)
 
 if (type == "Synoptic trawl") {
   nd <- filter(nd, survey %in% unique(positive_sets$survey_abbrev))
