--- a/text/refs.bib
+++ b/text/refs.bib
@@ -344,3 +344,45 @@ Columbia, Canada}},
   year          = {2019}
 }
 
+@Book{            anderson2022,
+  title         = {sdmTMB: Spatiotemporal species distribution GLMMs with
+                  'TMB'},
+  author        = {{Anderson}, {Sean C.} and {Ward},
+                  {Eric J.} and {Barnett}, {Lewis A. K.} and {English}, {Philina A.}},
+  year          = {2022},
+  date          = {2022},
+  note          = {R package version 0.0.21.9001}
+}
+
+@Article{         kristensen2016,
+  title         = {{{TMB}}: Automatic Differentiation and {{Laplace}}
+                  Approximation},
+  author        = {Kristensen, Kasper and Nielsen, Anders and Berg, Casper W.
+                  and Skaug, Hans and Bell, Bradley M.},
+  year          = {2016},
+  journal       = {Journal of Statistical Software},
+  volume        = {70},
+  number        = {5},
+  pages         = {1--21},
+  doi           = {10.18637/jss.v070.i05}
+}
+
+@Article{         lindgren2015,
+  title         = {Bayesian Spatial Modelling with {{R-INLA}}},
+  author        = {Lindgren, Finn and Rue, H{\aa}vard},
+  year          = {2015},
+  journal       = {Journal of Statistical Software},
+  volume        = {63},
+  number        = {1},
+  pages         = {1--25},
+  doi           = {10.18637/jss.v063.i19},
+  copyright     = {Copyright (c) 2013 Finn Lindgren, H\aa vard Rue}
+}
+
+@Article{         dfo2022yellowmouth,
+  author        = {{DFO}},
+  year          = {2022},
+  title         = {{Yellowmouth Rockfish (\emph{Sebastes reedi}) Stock Assessment for British Columbia in 2021}},
+  journal       = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep.},
+  volume        = {2022/001}
+}
